Extract js classes

--- a/index.html
+++ b/index.html
@@ -137,8 +137,12 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="//cdn.jsdelivr.net/handlebarsjs/3.0.3/handlebars.min.js"></script>
     <script src="//rawgit.com/justincy/wikitree-javascript-sdk/master/wikitree.js"></script>
-    <!-- <script src="//preview.c9.io/justincy/wikitree-javascript-sdk/wikitree.js"></script> -->
     <script src="//cdn.jsdelivr.net/familysearch-javascript-sdk/1.0.0/familysearch-javascript-sdk.min.js"></script>
+    
+    <script src="js/Watchlist.js"></script>
+    <script src="js/WatchlistEntry.js"></script>
+    <script src="js/Match.js"></script>
+    <script src="js/ExistingMatch.js"></script>
     <script src="fs-match.js"></script>
   </body>
 </html>
