Fix sandbox links; A2

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     
     <script id="existing-match-template" type="text/x-handlebars-template">
       <div>
-        <a class="fs-link" href="https://sandbox.familysearch.org/tree/#view=ancestor&person={{id}}" target="_blank">{{id}}</a>
+        <a class="fs-link" href="https://familysearch.org/tree/#view=ancestor&person={{id}}" target="_blank">{{id}}</a>
         <span class="text-muted certainty"> &middot; {{certainty}} &middot; </span>
         <a class="remove-match" href>remove</a>
         <img class="loader" src="ajax-loader-circle-ball-777-fff.gif" />
