--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
             <div>{{spouseName}}</div>
           </div>
           <div class="col-sm-2 text-right">
+            <select class="certainty">
+              <option value="certain">Certain</option>
+              <option value="uncertain">Uncertain</option>
+            </select>
             <button class="btn btn-primary btn-sm" data-loading-text="Creating Match...">Create Match</button>          
           </div>
         </div>
