Upgrade to FS SDK v2

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="list-group-item">
             <div class="row">
               <div class="col-sm-2">
-                {{id}}
+                <span class="text-muted">{{id}}</span>
               </div>
               <div class="col-sm-2">
                 <div class="text-muted">Birth</div>
@@ -217,7 +217,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="//cdn.jsdelivr.net/handlebarsjs/3.0.3/handlebars.min.js"></script>
     <script src="wikitree.js"></script>
-    <script src="//cdn.jsdelivr.net/familysearch-javascript-sdk/1.0.0/familysearch-javascript-sdk.min.js"></script>
+    <script src="//cdn.jsdelivr.net/familysearch-javascript-sdk/2.1.0/familysearch-javascript-sdk.min.js"></script>
     
     <script src="js/Watchlist.js"></script>
     <script src="js/WatchlistEntry.js"></script>
