Show spouse and parents for existing matches

--- a/index.html
+++ b/index.html
@@ -205,7 +205,16 @@
             <div class="death-date"></div>
             <div class="death-place"></div>
           </div>
-          <div class="col-sm-2 col-sm-offset-4 text-right">
+          <div class="col-sm-2">
+            <div class="text-muted">Parents</div>
+            <div class="father-name"></div>
+            <div class="mother-name"></div>
+          </div>
+          <div class="col-sm-2">
+            <div class="text-muted">Spouse</div>
+            <div class="spouse-name"></div>
+          </div>
+          <div class="col-sm-2 text-right">
             <a class="text-danger remove-match" href><span class="glyphicon glyphicon-remove"></span> Remove Match</a>
           </div>
         </div>
