Attach source to FamilySearch

--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
             <div class="text-muted">Spouse</div>
             <div class="spouse-name"></div>
           </div>
-          <div class="col-sm-2 text-right">
-            <a><span class="glyphicon glyphicon-link"></span> Create a link in FamilySearch</a>
-            <a class="text-danger remove-match" href><span class="glyphicon glyphicon-remove"></span> Remove Match</a>
+          <div class="col-sm-2">
+            <div><a class="fs-attach" href><span class="glyphicon glyphicon-link"></span> Link in FamilySearch</a></div>
+            <div><a class="text-danger remove-match" href><span class="glyphicon glyphicon-remove"></span> Remove Match</a></div>
           </div>
         </div>
       </div>
@@ -238,7 +238,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="//cdn.jsdelivr.net/handlebarsjs/3.0.3/handlebars.min.js"></script>
     <script src="wikitree.js"></script>
-    <script src="//cdn.jsdelivr.net/familysearch-javascript-sdk/2.1.0/familysearch-javascript-sdk.min.js"></script>
+    <script src="//cdn.jsdelivr.net/familysearch-javascript-sdk/2.5.0/familysearch-javascript-sdk.min.js"></script>
 
     <script src="js/Watchlist.js"></script>
     <script src="js/WatchlistEntry.js"></script>
