POST to wikitree; can't figure out error

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
           </div>
           <div class="col-sm-2">
             <div><a class="fs-attach" href><span class="glyphicon glyphicon-link"></span> Link in FamilySearch</a></div>
+            <div><a class="wikitree-merge" href><span class="glyphicon glyphicon-save"></span> Update WikiTree</a></div>
             <div><a class="text-danger remove-match" href><span class="glyphicon glyphicon-remove"></span> Remove Match</a></div>
           </div>
         </div>
@@ -238,7 +239,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="//cdn.jsdelivr.net/handlebarsjs/3.0.3/handlebars.min.js"></script>
     <script src="wikitree.js"></script>
-    <script src="//cdn.jsdelivr.net/familysearch-javascript-sdk/2.5.0/familysearch-javascript-sdk.min.js"></script>
+    <script src="//unpkg.com/familysearch-javascript-sdk@2.8.2/dist/familysearch-javascript-sdk.min.js"></script>
 
     <script src="js/Watchlist.js"></script>
     <script src="js/WatchlistEntry.js"></script>
