update links to FS family tree

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="row">
           <div class="col-sm-2">
             <div>
-              <strong><a class="fs-link" href="https://familysearch.org/tree/#view=ancestor&person={{id}}" target="_blank">
+              <strong><a class="fs-link" href="https://familysearch.org/tree/person/details/{{id}}" target="_blank">
                 <img class="loader" src="ajax-loader-circle-ball-777-fff.gif" />
               </a></strong>
             </div>
